LPS-188734 Fix Clarity Solution Alignments

--- a/modules/apps/site-initializer/site-initializer-liferay-marketplace/src/main/resources/site-initializer/fragments/group/marketplace-base-fragments/fragments/app-banner/index.css
+++ b/modules/apps/site-initializer/site-initializer-liferay-marketplace/src/main/resources/site-initializer/fragments/group/marketplace-base-fragments/fragments/app-banner/index.css
@@ -4,7 +4,6 @@
 	box-shadow: 0 0.3125rem 0.9375rem 0 rgba(19, 20, 31, 0.12);
 	gap: 1.5rem;
 	height: 7.5rem;
-	width: 80rem;
 }
 
 .banner__content {
